--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -845,3 +845,70 @@ address = "United Kingdom",
 edition = "6",
 pages = {203--242},
 }
+
+
+@article{slicq,
+author={Holighaus, Nicki and Dörfler, Monika and Velasco, Gino Angelo and Grill, Thomas},
+journal={IEEE Transactions on Audio, Speech, and Language Processing},
+title={A Framework for Invertible, Real-Time Constant-Q Transforms},
+year={2013},
+volume={21},
+number={4},
+pages={775--785},
+doi={10.1109/TASL.2012.2234114}}
+
+@article{shannon1948,
+author={C. E. {Shannon}},
+journal={The Bell System Technical Journal},
+title={A mathematical theory of communication},
+year={1948},
+volume={27},
+number={3},
+pages={379-423},
+doi={10.1002/j.1538-7305.1948.tb01338.x}}
+
+
+@article{nyquist1928,
+author={Harry {Nyquist}},
+journal={Transactions of the American Institute of Electrical Engineers},
+title={Certain Topics in Telegraph Transmission Theory},
+year={1928},
+volume={47},
+number={2},
+pages={617-644},
+doi={10.1109/T-AIEE.1928.5055024}}
+
+
+@misc{aliasmatlab,
+author={Nikhil Prathapani},
+year={2021},
+title={Sampling Theorem Illustration},
+url={https://www.mathworks.com/matlabcentral/fileexchange/45109-sampling-theorem-illustration},
+journal={MATLAB Central File Exchange}}
+
+@inproceedings{sisec2016,
+author = {Liutkus, Antoine and Stöter, Fabian-Robert and Rafii, Zafar and Kitamura, Daichi and Rivet, Bertrand and Ito, Nobutaka and Ono, Nobutaka and Fontecave, Julie},
+year = {2017},
+pages = {323--332},
+title = {The 2016 Signal Separation Evaluation Campaign},
+journal = {13th International Conference on Latent Variable Analysis and Signal Separation},
+volume = {10169},
+isbn = {978-3-319-53546-3},
+doi = {10.1007/978-3-319-53547-0_31},
+url = {https://hal.inria.fr/hal-01472932/document}
+}
+
+@article{sdruseful,
+  author    = {Hiroaki Nakajima and
+               Yu Takahashi and
+               Kazunobu Kondo and
+               Yuji Hisaminato},
+  title     = {Monaural source enhancement maximizing source-to-distortion ratio
+               via automatic differentiation},
+  journal   = {CoRR},
+  volume    = {abs/1806.05791},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1806.05791},
+  archivePrefix = {arXiv},
+  eprint    = {1806.05791},
+}
