--- a/latex/proposal.tex
+++ b/latex/proposal.tex
@@ -41,7 +41,7 @@
 
 \section{Introduction / Motivation}
 
-The short-time Fourier transform (STFT) is an important tool for the time-frequency analysis of acoustic signals. It is computed by applying the discrete Fourier transform on overlapping, fixed-size windows of the input signal, and it is commonly used to represent music in computational music information retrieval (MIR). Despite its popularity, the STFT limited by a fixed and bounded time-frequency resolution. In the sliCQ transform (\cite{invertiblecqt}), which is the realtime variant of the Nonstationary Gabor Transform (\cite{balazs}), the Fourier transform is applied with varying window sizes to adapt the time-frequency resolution to the characteristics of the studied signal. One important application of the sliCQ transform is to implement an invertible constant-Q transform for music (\cite{jbrown, klapuricqt}).
+The short-time Fourier transform (STFT) is an important tool for the time-frequency analysis of acoustic signals. It is computed by applying the discrete Fourier transform on overlapping, fixed-size windows of the input signal, and it is commonly used to represent music in computational music information retrieval (MIR). Despite its popularity, the STFT limited by a fixed and bounded time-frequency resolution. In the sliCQ transform (\cite{slicq}), which is the realtime variant of the Nonstationary Gabor Transform (\cite{balazs}), the Fourier transform is applied with varying window sizes to adapt the time-frequency resolution to the characteristics of the studied signal. One important application of the sliCQ transform is to implement an invertible constant-Q transform for music (\cite{jbrown, klapuricqt}).
 
 In the task of music source separation (\cite{musicsepgood}), a mixed song is decomposed into its constituent sources, which are typically either different instruments (drums, bass, vocals) or groups of sources with similar characteristics (percussive, harmonic). Machine learning models for music source separation with the STFT have achieved success in recent years (\cite{sisec2018}), but choosing the appropriate time-frequency resolution for the STFT is an important step which can significantly affect results (\cite{tftradeoff1, tftradeoff2}). In this thesis, the STFT is replaced with the sliCQ transform in Open-Unmix (\cite{umx}), a neural network for music source separation. The proposed model was submitted to the ISMIR 2021 Music Demixing Challenge,\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}} where it successfully separated the hidden data set within the required time limit. The sliCQ-based model did not surpass Open-Unmix, but demonstrates a viable and flexible starting point for future improvements.
 
