Time-domain waveform section good

--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -9,13 +9,13 @@
 
 \subsubsection{Acoustic signals and the time-domain waveform}
 
-\textcite[Chapter~2]{discretebook} define a signal as a term which is
+\textcite[Chapter~2]{discretebook} define a signal as a term which
 
 \begin{quote}
-	generally applied to something that conveys information. Signals ... convey information about the state or behavior of a physical system, and often, signals are synthesized for the purpose of communicating information between humans or between humans and machines... Signals are represented mathematically as functions of one or more independent variables. For example, a speech signal is represented mathematically as a function of time, and a photographic image is represented as a brightness function of two spatial variables.
+	conveys information about the state or behavior of a physical system, and often, signals are synthesized for the purpose of communicating information between humans or between humans and machines... Signals are represented mathematically as functions of one or more independent variables. For example, a speech signal is represented mathematically as a function of time, and a photographic image is represented as a brightness function of two spatial variables.
 \end{quote}
 
-As audio or sound waves are the primary signal being studied in this thesis, we turn to \textcite[Chapter~2]{moore}, who describes the phenomenon of sound waves as follows:
+As audio or sound waves are the type of signal studied in this thesis, \textcite[Chapter~2]{moore} describes the phenomenon of sound waves as follows:
 
 \begin{quote}
 	Sound originates from the vibration of an object. This vibration is impressed upon the surrounding medium (usually air) as a pattern of changes in pressure
@@ -26,12 +26,11 @@ The waveform is defined as the pressure variation plotted against time (\cite{mo
 In digital processing, continuous-time signals need to be sampled, or quantized in both time and amplitude, to form a sequence of numbers that describe the waveform (\cite[Chapter~2]{discretebook}). The resultant domain is called discrete time, and a discrete-time signal is denoted by $x[n]$.
 
 Continuous-time signals are typically captured into discrete-time representations by a process called sampling (\cite[Chapter~2]{melbook}) -- more specifically, the discretization of time is called sampling, and the discretization of amplitude is called quantization. The relationship of a discrete-time signal $x[n]$ of a continuous-time signal $x(t)$ is defined by the sampling period $T$:
-
 \[ x[n] = x_{a}(nT) \]
 
-Two variables describe the nature of the discrete representation: the sampling rate $F_{s} = \frac{1}{T}$, and the number of quantization levels $2^{B}$, where $B$ is the number of bits per sample of the representation.
+Two important variables describe the nature of the discrete representation: the sampling rate $F_{s} = \frac{1}{T}$, and the number of quantization levels $2^{B}$, where $B$ is the number of bits per sample of the representation.
 
-The first variable, the sampling rate, $F_{s}$, relates to the Nyquist-Shannon sampling theorem (\cite[Chapter~4]{discretebook}), which was described by both \textcite{nyquist1928} and \cite{shannon1948}. It states that the maximum frequency that can be represented by a sampling rate $F_{s}$ is $F_{\text{nyq}} = \frac{F_{s}}{2}$, which is also called the Nyquist rate or Nyquist frequency. If the signal contains frequencies above the Nyquist rate ($F \ge F_{\text{nyq}}$), it cannot be accurately represented due to the phenomenon of aliasing due to undersampling (\cite[Chapter~4]{discretebook}). An illustration is shown in figure \ref{fig:aliasing}.
+First, continuous time needs to be sampled into the discrete time domain. The sampling rate, $F_{s}$, relates to the Nyquist-Shannon sampling theorem (\cite[Chapter~4]{discretebook}), which was described by both \textcite{nyquist1928} and \textcite{shannon1948}. It states that the maximum frequency that can be represented by a sampling rate $F_{s}$ is $F_{\text{nyq}} = \frac{F_{s}}{2}$, which is also called the Nyquist rate or Nyquist frequency. If the signal contains frequencies above the Nyquist rate ($F \ge F_{\text{nyq}}$), it cannot be accurately represented due to the phenomenon of aliasing due to undersampling (\cite[Chapter~4]{discretebook}). An illustration is shown in figure \ref{fig:aliasing}.
 
 \begin{figure}[ht]
 	\centering
@@ -40,7 +39,10 @@ The first variable, the sampling rate, $F_{s}$, relates to the Nyquist-Shannon s
 	\label{fig:aliasing}
 \end{figure}
 
-The second variable, the quantization levels of the amplitude, 
+Second, the continuous amplitude needs to be quantized. Stated by \textcite[Chapter~4]{discretebook}, ``the quantizer is a nonlinear system whose purpose is to transform the input sample $x[n]$ into one of a finite set of prescribed values.'' The second variable which relates to the quantization process is the number of quantization levels. The quantization operation is represented as
+\[ \hat{x}[n] = Q(x[n]) \]
+
+, where $\hat{x}[n]$ is the quantized sample. Quantization levels can be defined to be uniform (evenly spaced) or nonuniform, and in essence the sample values are rounded to the nearest quantization level $2^{B}$, recalling that $B$ is the number of bits per sample in the representation (\cite{discretebook}).
 
 An A/D or ADC (analog-to-digital converter) circuit and its operation on a waveform is shown in figure \ref{fig:adccircuit}. Finally, a continuous-time pressure waveform, and the sequence representing its digitally sampled discrete-time version, are shown in figure \ref{fig:discretecontinuous}.
 
@@ -48,17 +50,19 @@ An A/D or ADC (analog-to-digital converter) circuit and its operation on a wavef
 	\centering
 	\subfloat[Analog-to-digital converter (ADC)]{\includegraphics[height=2.2cm]{./images-tftheory/adc1.png}}
 	\hspace{0.1em}
-	\subfloat[ADC details with the ideal continuous-discrete (C/D) circuit]{\includegraphics[height=2.2cm]{./images-tftheory/adc2.png}}\\
-	\subfloat[Waveform results of the ADC process]{\includegraphics[width=\textwidth]{./images-tftheory/adc3.png}}\\
+	\subfloat[ADC details: sampler and quantizer]{\includegraphics[height=2.2cm]{./images-tftheory/adc2.png}}\\
+	\subfloat[Waveform results of the ADC process]{\includegraphics[width=0.675\textwidth]{./images-tftheory/adc3.png}}\\
 	\caption{An ADC converter circuit showing the time sampling and amplitude quantizing operations (\cite[Chapter~4]{discretebook})}
 	\label{fig:adccircuit}
 \end{figure}
 
+\vspace{-1em}
+
 \begin{figure}[ht]
 	\centering
-	\subfloat[Continuous-time waveform]{\includegraphics[height=3.5cm]{./images-tftheory/continuoustime.png}}
+	\subfloat[Continuous-time waveform]{\includegraphics[height=2.25cm]{./images-tftheory/continuoustime.png}}
 	\hspace{0.1em}
-	\subfloat[Discrete-time waveform]{\includegraphics[height=3.5cm]{./images-tftheory/discretetime.png}}
+	\subfloat[Discrete-time waveform]{\includegraphics[height=2.25cm]{./images-tftheory/discretetime.png}}
 	\caption{A continous-time signal and its discrete-time representation sampled with $T = 125\mu s$ (\cite[Chapter~2]{discretebook})}
 	\label{fig:discretecontinuous}
 \end{figure}
