--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -230,7 +230,6 @@ url = {http://dafx10.iem.at/papers/DerryFitzGerald_DAFx10_P15.pdf}
 @article{fitzgerald2,
 author = {Fitzgerald, Derry and Gainza, Mikel},
 year = {2010},
-pages = {},
 title = {Single Channel Vocal Separation using Median Filtering and Factorisation Techniques},
 volume = {4},
 journal = {ISAST Transactions on Electronic and Signal Processing}
@@ -911,4 +910,23 @@ url = {https://hal.inria.fr/hal-01472932/document}
   url       = {http://arxiv.org/abs/1806.05791},
   archivePrefix = {arXiv},
   eprint    = {1806.05791},
+}
+
+@inproceedings{jaillet,
+  title={Nonstationary Gabor Frames},
+  author={Florent Jaillet and P. Bal{\'a}zs and M. D{\"o}rfler},
+  year={2009},
+  booktitle={SAMPTA'09, International Conference on SAMPling Theory and Applications},
+  url={https://github.com/ltfat/ltfat.github.io/blob/master/notes/ltfatnote010.pdf},
+}
+
+@article{tfjigsaw,
+author = {Jaillet, Florent and Torrésani, Bruno},
+year = {2007},
+month = {03},
+pages = {},
+title = {Time-Frequency Jigsaw Puzzle: adaptive multiwindow and multilayered Gabor expansions},
+volume = {05},
+journal = {International Journal of Wavelets, Multiresolution and Information Processing},
+doi = {10.1142/S0219691307001768}
 }
