--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -122,6 +122,11 @@ edition = {1st},
   year = {1999},
 }
 
+@book{dspfirst,
+author = {McClellan, James H. and Ronald W. Schafer, and and Yoder, M. A.},
+title={Signal Processing First},
+publisher={Pearson/Prentice Hall Upper Saddle River, NJ},
+year={2003}}
 
 @incollection{timbretransients1,
   author    = {Stephen McAdams},
