--- a/latex/ch3_methodology.tex
+++ b/latex/ch3_methodology.tex
@@ -1,6 +1,15 @@
 \documentclass[report.tex]{subfiles}
 \begin{document}
 
+\chaptertodo{
+sigsep-mus-eval optimization in oracle section\\
+Describe open-unmix-pytorch (LSTM vs. gh template)\\
+Summarize CDAE papers (should be simple)\\
+}
+
+\vfill
+\clearpage
+
 \section{Methodology}
 
 The proposed adaptation of Open-Unmix (\cite{umx}) to use the sliCQ transform (\cite{slicq}) was named xumx-sliCQ, and is the subject and main result of this thesis. The following methodology section will cover how xumx-sliCQ was written step-by-step.
