--- a/latex/ch4_experiment.tex
+++ b/latex/ch4_experiment.tex
@@ -1,6 +1,15 @@
 \documentclass[report.tex]{subfiles}
 \begin{document}
 
+\chaptertodo{
+do boxplot for different sizes of STFT vs. chosen sliCQ - with cupy thing\\
+selected spectrograms showing the sliCQ transform vs. the STFT\\
+table of network learning parameters etc. from those repos (and scripts/train.py defaults)\\
+}
+
+\vfill
+\clearpage
+
 \section{Experiment}
 
 \subsection{sliCQ transform performance analysis}
