--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -123,7 +123,7 @@ edition = {1st},
 }
 
 @book{dspfirst,
-author = {McClellan, James H. and Ronald W. Schafer, and and Yoder, M. A.},
+author = {McClellan, James H. and Schafer, Ronald W. and Yoder, M. A.},
 title={Signal Processing First},
 publisher={Pearson/Prentice Hall Upper Saddle River, NJ},
 year={2003}}
