--- a/latex/report.tex
+++ b/latex/report.tex
@@ -58,6 +58,8 @@
 
 \newcommand{\ichfeedback}[1]{\todo[color=green!40,inline]{#1}}
 
+\newcommand{\chaptertodo}[1]{\todo[color=magenta!40,inline]{#1}}
+
 \title{\ThesisTitle}
 
 \author{\vspace{1em}\\Sevag Hanssian \\
