Souls of the stft

--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -6,6 +6,7 @@ intersperse TF-presentation on Gabor in Chapter 2 transforms section\\
 Gabor transform, STFT need diagrams (similar to TF presentations)\\
 Fourier pdf: \url{https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7389485}\\
 Fourier history: \url{https://ieeexplore.ieee.org/document/7389485}\\
+3 souls of the STFT: \url{https://www.researchgate.net/publication/307653687_Arbitrary_Phase_Vocoders_by_means_of_Warping}\\
 }
 
 \vfill
